<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop"
        android:alpha="0.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewCalcTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/gradient_end_color"
            android:padding="8dp"
            android:text="@string/main_title"
            android:textColor="#FDFCFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textViewCalcAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_distance"
            android:inputType="numberDecimal"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/editTextConsumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_consumption"
            android:inputType="numberDecimal"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_calculate"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back_to_main"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</RelativeLayout>